# sentinel

./: AGENTS_ROADMAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  ZENTINEL_MIGRATION_ROADMAP.md  install.sh  mise.toml
.claude/: AGENTS_ROADMAP.md  AGENT_ARCHITECTURE_ANALYSIS.md  AGENT_PROTOCOL_2.0.md  BENCHMARKING_ROADMAP.md  CLAUDE.md  CONFIG_INSPECT_PLAN.md  PINGORA_INTEGRATION.md  ROADMAP-0.3.0-DRAFT.md  ROADMAP.md  WASM_ROADMAP.md
.claude/rules/: project.md  rust-standards.md
.github/: FUNDING.yml
.github/workflows/: _build.yml  _docker.yml  ci.yml  generate-api.yml  release.yml
agents/data-masking/: Cargo.toml
agents/data-masking/src/: config.rs  handler.rs  main.rs
agents/data-masking/src/masking/: engine.rs  fpe.rs  patterns.rs
agents/data-masking/src/parsers/: form.rs  json.rs  mod.rs  xml.rs
agents/denylist/: Cargo.toml
agents/echo/: Cargo.toml
agents/echo/src/: main.rs
agents/ratelimit/: Cargo.toml
agents/ratelimit/src/: main.rs
agents/registry/: api-deprecation.toml  audit-logger.toml  bot-management.toml  bundle.toml  chaos.toml  content-scanner.toml  denylist.toml  graphql-security.toml  grpc-inspector.toml  ip-reputation.toml  js.toml  lua.toml  mock-server.toml  modsec.toml  mqtt-gateway.toml  ratelimit.toml  soap.toml  spiffe.toml  transform.toml  waf.toml  wasm.toml  websocket-inspector.toml  zentinelsec.toml
agents/wasm-allowlist/: Cargo.toml
config/: sentinel.kdl
config/examples/: api-schema-validation.kdl  http-caching.kdl
conformance/: conformance_test.go  go.mod  go.sum
crates/agent-protocol/: Cargo.toml  build.rs
crates/agent-protocol/benches/: hot_path.rs
crates/agent-protocol/docs/: README.md  performance-roadmap.md
crates/agent-protocol/src/: buffer_pool.rs  client.rs  errors.rs  headers.rs  lib.rs  mmap_buffer.rs  protocol.rs  server.rs
crates/agent-protocol/tests/: v2_integration.rs
crates/common/: Cargo.toml
crates/common/src/: budget.rs  circuit_breaker.rs  errors.rs  ids.rs  lib.rs  limits.rs  observability.rs  types.rs
crates/config/: Cargo.toml
crates/config-inspect/src/: graph.rs
crates/config/examples/: validate_examples.rs
crates/config/src/: agents.rs  defaults.rs  filters.rs  flatten.rs  lib.rs  namespace.rs  resolution.rs  routes.rs  validation.rs
crates/config/src/kdl/: mod.rs  (+7 more)
crates/gateway/src/: config_writer.rs  controller.rs  translator.rs
crates/playground-wasm/: Cargo.toml  README.md
crates/playground-wasm/src/: lib.rs
crates/proxy/: Cargo.toml
crates/proxy/docs/: bundle.md
crates/proxy/src/: agents.rs  builtin_handlers.rs  cache.rs  config.rs  decompression.rs  discovery.rs  distributed_rate_limit.rs  geo_filter.rs  health.rs  http3.rs  http_helpers.rs  hybrid_cache.rs  kubeconfig.rs  lib.rs  logging.rs  main.rs  memcached_rate_limit.rs  metrics.rs  otel.rs  rate_limit.rs  reload.rs  routing.rs  scoped_circuit_breaker.rs  scoped_rate_limit.rs  scoped_routing.rs  shadow.rs  tls.rs  upstream.rs  websocket.rs
crates/proxy/tests/: acme_dns01_test.rs  acme_startup_test.rs  distributed_rate_limit_test.rs  mtls_upstream_integration_test.rs  service_types_test.rs  tls_mtls_test.rs  tls_sni_test.rs
crates/sim/: Cargo.toml
crates/sim/src/: agents.rs  lib.rs  stateful.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: config.rs  lib.rs  runtime.rs
deploy/: deploy.sh  sentinel-echo-agent.service  sentinel-ratelimit-agent.service  sentinel.service
docs/: AGENT_DEVELOPMENT.md  CAPACITY_PLANNING.md  CONFIG_EXAMPLES_GAP_ANALYSIS.md  INCIDENT_RESPONSE.md  METRICS.md  MISE_TASKS.md  RUNBOOK.md  SECURITY_HARDENING.md  UPGRADE_MIGRATION.md
tests/: Makefile  bundle_e2e_test.sh  test_agents.sh  test_first_time_lua.sh  test_first_time_waf.sh  test_mega_agent.sh
tools/api-gen/: Cargo.toml
tools/api-gen/src/: main.rs
(+78 files in other folders)
