[package]
name = "zentinel-api-gen"
version = "0.1.0"
edition = "2021"
publish = false
description = "Generates static JSON API and bundle-versions.lock from agents/registry/*.toml"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.25"
